<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ccp_dialog_background">

    <RelativeLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_dismiss"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/dismiss_button_content_description"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toRightOf="@id/img_dismiss"
            android:fontFamily="@font/outfit_semibold"
            android:text="@string/select_country"
            android:textColor="@color/ccp_dialog_text_primary"
            android:textSize="18sp" />

        <ImageView
            android:layout_alignParentEnd="true"
            android:id="@+id/img_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/close_button_content_description"
            android:src="@drawable/ic_clear_black_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_query_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ccp_search_bg"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/ll_header">

        <EditText
            android:id="@+id/editText_search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_toStartOf="@+id/img_clear_query"
            android:background="@null"
            android:fontFamily="@font/outfit_regular"
            android:hint="@string/search_hint_text"
            android:imeOptions="actionSearch"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textColor="@color/ccp_dialog_text_primary"
            android:textColorHint="@color/ccp_dialog_text_secondary"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/img_clear_query"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/clear_search_button_content_description"
            android:padding="4dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_backspace_black_24dp"
            app:tint="@color/ccp_dialog_text_secondary" />
    </RelativeLayout>

    <View
        android:id="@+id/divider_search"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/ccp_dialog_divider"
        app:layout_constraintTop_toBottomOf="@id/rl_query_holder" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_section_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:padding="16dp"
        android:text="Alphabetical"
        android:textColor="@color/ccp_dialog_text_secondary"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/divider_search" />

    <View
        android:id="@+id/divider_section"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ccp_dialog_divider"
        app:layout_constraintTop_toBottomOf="@id/tv_section_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_countryDialog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_section" />

    <com.smcoding.countrycodepicker.recyclerview_listeners.FastScroller
        android:id="@+id/fastscroll"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/recycler_countryDialog"
        app:layout_constraintEnd_toEndOf="@id/recycler_countryDialog"
        app:layout_constraintTop_toTopOf="@id/recycler_countryDialog" />

    <TextView
        android:id="@+id/textView_noresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/outfit_regular"
        android:text="@string/no_result_found"
        android:textColor="@color/ccp_dialog_text_primary"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_section" />

</androidx.constraintlayout.widget.ConstraintLayout>